17.03.2019
==========
hcxpcaptool: add man 1 page


09.03.2019
==========
hcxtools moved to version 5.1.3 due to change of pcapng comment field


07.03.2019
==========
hcxpcaptool added GPX comment field for GPS time from GPS device 

<?xml version="1.0"?>
<gpx version="1.0" creator="hcxpcaptool"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xmlns="http://www.topografix.com/GPX/1/0"
xsi:schemaLocation="http://www.topografix.com/GPX/1/0 http://www.topografix.com/GPX/1/0/gpx.xsd">
<name>test3.gpx</name>
<trk>
  <name>dntest.pcapng</name>
  <trkseg>
  <trkpt lat="49.126353" lon="4.626187">
    <ele>129.500000</ele>
    <time>2019-03-06T22:27:45Z</time>
    <name>1af87c9124a3</name>
    <cmt>GPS-TIME:2019-03-06T22:28:00Z</cmt>
  </trkpt>


26.02.2019
==========
hcxtools moved to version 5.1.3 due to several bug fixes


18.02.2019
==========
hcxtools moved to version 5.1.2 due to implementation of serveral new options


14.02.2019
==========
wlancap2wpasec: added new option -e
-e <email address> : set email address, if requiered


13.02.2019
==========
hcxpsktool added full support (option -j) for john
-i <file> : input EAPOL hash file (hashcat)
-j <file> : input EAPOL hash file (john)
-z <file> : input PMKID hash file (hashcat and john)


12.02.2019
==========
hcxpcaptool: added new option -X
-X <file> : output client probelist
          : format: mac_sta:probed ESSID (autohex enabled)


added new tool: hcxwltool
while hcxpsktool is designed to run on hcxpcaptool -o and -z output,
hcxwltool is designed to run on hcapcaptool -E, -I and -U output

$ hcxwltool -h
hcxwltool 5.1.1 (C) 2019 ZeroBeat
usage:
hcxwltool <options>

options:
-i        : input worlist
-o <file> : output wordlist to file
-h        : show this help
-v        : show version

--straight       : output format untouched
--digit          : output format only digits
--xdigit         : output format only xdigits
--lower          : output format only lower
--upper          : output format only upper