@@ -1680,17 +1680,17 @@ printf("%s %s (C) %s ZeroBeat\n"
 	"%s <options>\n"
 	"\n"
 	"options:\n"
-	"-i <file> : input EAPOL hash file (hashcat)\n"
-	"-j <file> : input EAPOL hash file (john)\n"
-	"-z <file> : input PMKID hash file (hashcat and john)\n"
-	"-e <file> : input ESSID\n"
-	"-b <file> : input MAC access point\n"
-	"            format: 112233445566\n"
-	"-o <file> : output PSK file\n"
-	"            default: stdout\n"
-	"            output list must be sorted unique!\n"
-	"-h        : show this help\n"
-	"-v        : show version\n"
+	"-i <file>   : input EAPOL hash file (hashcat)\n"
+	"-j <file>   : input EAPOL hash file (john)\n"
+	"-z <file>   : input PMKID hash file (hashcat and john)\n"
+	"-e <char>   : input ESSID\n"
+	"-b <xdigit> : input MAC access point\n"
+	"              format: 112233445566\n"
+	"-o <file>   : output PSK file\n"
+	"              default: stdout\n"
+	"              output list must be sorted unique!\n"
+	"-h          : show this help\n"
+	"-v          : show version\n"
 	"\n"
 	"--netgear : include NETGEAR candidates\n"
 	"--weakpass: include weak password candidates\n"
