@@ -1,0 +1,66 @@
+.TH HCXPSKTOOL "1"
+
+.SH NAME
+hcxpsktool - checks for insecure passwords
+
+.SH SYNOPSIS
+.B  hcxpsktool <options>
+
+.SH DESCRIPTION
+.BI hcxpsktool
+is a tool to to check for insecure passwords and weak candidates.
+
+.SH AUTHOR
+This manual page was written by Mike (ZeroBeat).
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so. License MIT
+
+.SH OPTIONS
+.TP
+.B Common options:
+.TP
+.I -o <file>
+input EAPOL hash file (hashcat)
+.TP
+.I -j <file>
+input EAPOL hash file (john)
+.TP
+.I -z <file>
+input PMKID hash file (hashcat and john)
+.TP
+.I -e <char>
+input ESSID
+.TP
+.I -b <xdigit>
+input MAC access point
+.TP
+.I -o <file>
+output PSK file
+.TP
+.B Other options:
+.TP
+.I --netgear
+include NETGEAR candidates
+.TP
+.I --weakpass
+include weak password candidates
+.TP
+.I --eudate
+include complete european dates
+.TP
+.I --usdate
+include complete american dates
+.TP
+.I --wpskeys
+include complete WPS keys
+.TP
+.I -h or --help
+show help screen
+.TP
+.I -v or --version
+show version
+.TP
