@@ -1,6 +1,7 @@
 17.03.2019
 ==========
-hcxpcaptool: add man 1 page
+hcxpcaptool: added man 1 page
+hcxpsktool: added man 1 page
 
 
 09.03.2019
